# ros2_end

./: .gitignore
STM32_project/M_TEST/: .mxproject  M_TEST.ioc  README.txt
STM32_project/M_TEST/Core/Inc/: main.h  stm32f1xx_it.h
STM32_project/M_TEST/Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_hal_timebase_tim.c  stm32f1xx_it.c
STM32_project/M_TEST/MDK-ARM/: M_TEST.uvprojx
STM32_project/M_TEST/MDK-ARM/RTE/_M_TEST/: RTE_Components.h
STM32_project/M_TEST/MDK-ARM/user_lib/: motor.c  motor.h
esp32_receiver/: CMakeLists.txt  package.xml
esp32_receiver/ardunio/sketch_nov24a_copy_20251125075129/: sketch_nov24a_copy_20251125075129.ino
esp32_receiver/config/: carlikebot_controllers.yaml
esp32_receiver/data/: dqn_model.pth  dqn_parameters.csv
esp32_receiver/description/: camera.xacro  gazebo_control.xacro  gazebo_table.urdf.xacro  goal.xacro  robot.urdf.xacro  robot_core.xacro  table.xacro  wall.xacro
esp32_receiver/launch/: all_gazebo_world_launch.py  all_machine_learning.launch.py  all_system.launch.py  camera9.py  gazebo_image.py  gazebo_table.launch.py  gogogo.py  machine_learning.launch.py  machine_learning.py  machine_learning_two.launch.py  machine_learning_two.py  open_gazebo.launch.py  open_pkl.py  try  try.py
esp32_receiver/rosbridge_ws/: main.html
esp32_receiver/src/: image_subscriber.cpp  micro_ros_receiver.cpp  subscriber.cpp  udp_receiver.cpp  udp_server.cpp  web_sub.cpp
esp32_receiver/urdf_data/: config.json  robot.urdf
esp32_receiver/urdf_data/assets/: mc520电机模型1024线.part  mc520电机模型1024线.stl  mg513µç_úö_¼ü.part  mg513µç_úö_¼ü.stl  part_1.part  part_1.stl  part_1__2.part  part_1__2.stl
esp32_receiver/woilds/: empty.world
rosbridge_ws/back/: package-lock.json  package.json  test_db  test_db.js  test_zeabur.js
rosbridge_ws/front/: Login.css  Login.html  index.html  main.css  main.html  register.html
rosbridge_ws/sql/: esp32.sql
